cloudformation_standalone.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "www",
  "Parameters": {
    "amiID": {
      "Type": "String",
      "Default": "ami-60b6c60a"
    },
    "instanceType": {
      "Type": "String",
      "Default": "t2.micro"
    },
    "wwwPort": {
      "Type": "String",
      "Default": "80"
    },
    "vpcCIDR": { "Type": "String" },
    "public1CIDR": { "Type": "String" },
    "public2CIDR": { "Type": "String" },
    "wwwStackName": { "Type": "String" },
    "wwwTrustedIP": { "Type": "String" },
    "PrivateKey": { "Type": "String" },
    "KeyName": { "Type": "AWS::EC2::KeyPair::KeyName" }
  },
  "Mappings": {
    "AvailabilityZone": {
      "us-east-1": {
        "AZPublic1": "us-east-1a",
        "AZPublic2": "us-east-1c"
      }
    }
  },
  "Resources": {
    "wwwVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": { "Ref": "vpcCIDR" },
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }]
      }
    },
    "wwwSubnetPublic1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZone", { "Ref": "AWS::Region" },
            "AZPublic1"
          ]
        },
        "VpcId": { "Ref": "wwwVPC" },
        "CidrBlock": { "Ref": "public1CIDR" },
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }]
      }
    },
    "wwwSubnetPublic2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::FindInMap": [
            "AvailabilityZone", { "Ref": "AWS::Region" },
            "AZPublic2"
          ]
        },
        "VpcId": { "Ref": "wwwVPC" },
        "CidrBlock": { "Ref": "public2CIDR" },
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }]
      }
    },
    "wwwInternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }]
      }
    },
    "wwwInternetGatewayAttach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "wwwVPC" },
        "InternetGatewayId": { "Ref": "wwwInternetGateway" }
      }
    },
    "wwwRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "wwwVPC" }
      }
    },
    "wwwDefaultRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "wwwRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "wwwInternetGateway" }
      }
    },
    "wwwRouteTableAssociationSubnet1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "wwwSubnetPublic1" },
        "RouteTableId": { "Ref": "wwwRouteTable" }
      }
    },
    "wwwRouteTableAssociationSubnet2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "wwwSubnetPublic2" },
        "RouteTableId": { "Ref": "wwwRouteTable" }
      }
    },
    "wwwSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "www security group",
        "VpcId": { "Ref": "wwwVPC" },
        "Tags": [{
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        }],
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
          }, 
          {
          "IpProtocol": "tcp",
          "FromPort": "22",
          "ToPort": "22",
          "CidrIp": { "Ref": "wwwTrustedIP" }
        }]
      }
    },
    "wwwInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": { 
          "Fn::FindInMap": [ 
            "AvailabilityZone", { "Ref": "AWS::Region" }, 
            "AZPublic1" 
          ]
        },
        "ImageId": { "Ref": "amiID" },
        "InstanceType" : { "Ref": "instanceType" },
        "KeyName": { "Ref": "KeyName" },
        "SecurityGroupIds" : [ { "Ref": "wwwSecurityGroup" } ],
        "SubnetId" : { "Ref": "wwwSubnetPublic1" },
        "Tags": [ {
          "Key": "Name",
          "Value": { "Ref": "AWS::StackName" }
        } ],
        "UserData" : ""
      }
    },
    "wwwELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Subnets": [ { 
          "Ref": "wwwSubnetPublic1", 
          "Ref": "wwwSubnetPublic2"
        } ],
        "Instances": [ { "Ref" : "wwwInstance" } ],
        "Listeners": [ {
          "LoadBalancerPort": "80",
          "InstancePort": { "Ref" : "wwwPort" },
          "Protocol": "HTTP"
        } ],
        "HealthCheck": {
          "Target": {
            "Fn::Join": [ "", [ "HTTP:", { "Ref" : "wwwPort" }, "/" ] ]
          },
          "HealthyThreshold": "3",
          "UnhealthyThreshold": "5",
          "Interval": "30",
          "Timeout": "5"
        }
      }
    }
  },
  "Outputs": {
    "wwwVPC": {
      "Value": { "Ref": "wwwVPC" }
    },
    "wwwSubnet1": {
      "Value": { "Ref": "wwwSubnetPublic1" }
    },
    "wwwSubnet2": {
      "Value": { "Ref": "wwwSubnetPublic2" }
    },
    "wwwTrustedIP": {
      "Value": { "Ref": "wwwTrustedIP" }
    },
    "KeyName": {
      "Value": { "Ref": "KeyName" }
    }
  }
}
